@@ -8,6 +8,8 @@ Revision history for Perl module CPAN::Mini::Webserver:
      - use PAUSE names if 00whois.xml is mirrored (patch by martijn)
      - add info like email/homepage and some links to other 
        cpan-related pages for the author (patch by martijn)
+     - make an empty search give "No results found", rather than
+       an error (noticed by corion)
 
 0.39 Tue Aug 19 08:27:37 BST 2008
      - make a single key from the license text and the license url
